--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
     <title>Document</title>
+    <style>
+        .calculator-body{
+            height: 300px;
+            width: 250px;
+            background-color:#3D3D5C;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 <body>
-<h1>Calculator</h1>
+<div class="calculator-body">
+
+</div>
 </body>
 </html>
