--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
             width: 250px;
             background-color:#3D3D5C;
             margin: 20px auto;
+            padding: 20px;
+            border-radius: 10px;
+        }
+        .screen{
+            background-color: #a1af77;
         }
     </style>
 </head>
 <body>
 <div class="calculator-body">
-
+  <input type="text" value="0" class="screen">
 </div>
 </body>
 </html>
