--- a/index.html
+++ b/index.html
@@ -10,15 +10,33 @@
             margin: 20px auto;
             padding: 20px;
             border-radius: 10px;
+            padding: 20px;
+            padding-top: 40px;
         }
         .screen{
             background-color: #a1af77;
+            text-align: right;
+            width: 220px;
+            display: block;
+            margin: 0 auto;
+            font-size: 25px;
+            padding: 5px 10px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
 <div class="calculator-body">
   <input type="text" value="0" class="screen">
+  <div class="btn-container">
+    <button>AC</button>
+    <button>7</button>
+    <button>4</button>
+    <button>1</button>
+    <button>0</button>
+    
+
+  </div>
 </div>
 </body>
 </html>
