--- a/index.html
+++ b/index.html
@@ -23,17 +23,29 @@
             padding: 5px 10px;
             margin-bottom: 20px;
         }
+        .btn{
+            width: 50px;
+            text-align: center;
+            padding: 2px 0;
+            font-size: 20px;
+        }
+        .btn-container{
+            height: 200px;
+            background-color: tomato;
+            display: flex;
+            flex-direction: column;
+        }
     </style>
 </head>
 <body>
 <div class="calculator-body">
   <input type="text" value="0" class="screen">
   <div class="btn-container">
-    <button>AC</button>
-    <button>7</button>
-    <button>4</button>
-    <button>1</button>
-    <button>0</button>
+    <button class="btn">AC</button>
+    <button class="btn">7</button>
+    <button class="btn">4</button>
+    <button class="btn">1</button>
+    <button class="btn">0</button>
     
 
   </div>
