--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
             text-align: center;
             padding: 2px 0;
             font-size: 20px;
+            margin: 3px;
         }
         .btn-container{
             height: 200px;
-            background-color: tomato;
             display: flex;
             flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .btn-equal{
+            background-color: tomato;
+            height: 70px;
         }
     </style>
 </head>
@@ -46,6 +53,23 @@
     <button class="btn">4</button>
     <button class="btn">1</button>
     <button class="btn">0</button>
+
+    <button class="btn">M+</button>
+    <button class="btn">8</button>
+    <button class="btn">2</button>
+    <button class="btn">5</button>
+    <button class="btn">.</button>
+
+    <button class="btn">/</button>
+    <button class="btn">9</button>
+    <button class="btn">6</button>
+    <button class="btn">3</button>
+    <button class="btn">%</button>
+
+    <button class="btn">x</button>
+    <button class="btn">-</button>
+    <button class="btn">+</button>
+    <button class="btn btn-equal">=</button>
     
 
   </div>
