--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             padding: 2px 0;
             font-size: 20px;
             margin: 3px;
+            border: 0.5px solid black;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .btn:hover{
+            box-shadow: 0 0 5px 0 white;
+            transition: 0.5s;
         }
         .btn-container{
             height: 200px;
@@ -39,8 +46,9 @@
             align-items: center;
         }
         .btn-equal{
-            background-color: tomato;
+            background-color:#ff6348;
             height: 70px;
+            color: white;
         }
     </style>
 </head>
