digital font add

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <title>Document</title>
     <style>
+      @font-face {
+      font-family: 'DS-Digital Normal';
+      font-style: normal;
+      font-weight: normal;
+      src: local('DS-Digital Normal'), url('DS-DIGI.woff') format('woff');
+    }
         .calculator-body{
             height: 300px;
             width: 250px;
@@ -22,6 +28,7 @@
             font-size: 25px;
             padding: 5px 10px;
             margin-bottom: 20px;
+            font-family: 'DS-Digital Normal';
         }
         .btn{
             width: 50px;
